[package]
name = "rehino"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
russh = { path = '../russh' }
russh-keys = { path = '../russh-keys' }

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
async-trait = "0.1.80"
log = "0.4.22"
env_logger = "0.11.3"
base64 = "0.22.1"
chrono = "0.4.38"
uuid = { version = "0.4", features = ["serde", "v4"] }
russh = { path = '../russh' }
russh-keys = { path = '../russh-keys' }
